Fix FlowBox display on mobile

--- a/styles/FlowBox.module.css
+++ b/styles/FlowBox.module.css
@@ -18,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
+  font-size: 15px;
 }
 .flowBoxChain {
   display: flex;
@@ -106,4 +107,26 @@
     rgba(255, 255, 255, 0.6) 0%,
     rgba(255, 255, 255, 0) 70%
   );
+}
+
+@media (max-width: 600px) {
+  .flowBoxTitle,
+  .flowBoxRow a {
+    font-size: 10px;
+  }
+  .flowBoxChainsReverse {
+    gap: 8px;
+  }
+  .flowBoxSpacer {
+    width: 15px;
+  }
+  .valueBar {
+    height: 25px;
+  }
+  .flowBox {
+    gap: 5px;
+  }
+  .flowsContainer {
+    gap: 30px;
+  }
 }
